Presentation/Istio/student-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-portal
  template:
    metadata:
      labels:
        app: student-portal
    spec:
      serviceAccountName: student-portal-sa
      containers:
      - name: student-portal
        image: curlimages/curl
        command: [ "sleep", "3600" ]
---
apiVersion: v1
kind: Service
metadata:
  name: student-portal
spec:
  selector:
    app: student-portal
  ports:
  - port: 80
    targetPort: 8080
