Presentation/Istio/professor-tools-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-professor-inbound
  namespace: default
spec:
  selector:
    matchLabels:
      app: professor-tools
  rules: []
